--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## System dependencies are found with CMake's conventions
 find_package(Boost REQUIRED COMPONENTS system)
 find_package(YARP REQUIRED)
-find_package(ICUB REQUIRED)
+#find_package(ICUB REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(TinyXML REQUIRED)
 find_package(drc_shared REQUIRED)
@@ -106,7 +106,9 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-include_directories(include ${drc_shared_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS} ${Eigen_INCLUDE_DIRS}
+include_directories(include ${drc_shared_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS} 
+#${ICUB_INCLUDE_DIRS} 
+${Eigen_INCLUDE_DIRS}
 ${TinyXML_INCLUDE_DIRS})
 
 ## Declare a cpp library
@@ -120,11 +122,15 @@ add_executable(robot_state_publisher_ext_node src/main.cpp)
 #add_dependencies(yarp_ros_wrench_imu_publisher_node yarp_ros_wrench_imu_publisher_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(idyn_ros_interface ${drc_shared_LIBRARIES} ${YARP_LIBRARIES} icubmod ${ICUB_LIBRARIES} ${catkin_LIBRARIES}
+target_link_libraries(idyn_ros_interface ${drc_shared_LIBRARIES} ${YARP_LIBRARIES} icubmod 
+#${ICUB_LIBRARIES} 
+${catkin_LIBRARIES}
 ${iDynTree_LIBRARIES}
 ${kdl_codyco_LIBRARIES}
 ${TinyXML_LIBRARIES})
-target_link_libraries(robot_state_publisher_ext_node idyn_ros_interface ${drc_shared_LIBRARIES} ${YARP_LIBRARIES} icubmod ${ICUB_LIBRARIES} ${catkin_LIBRARIES})
+target_link_libraries(robot_state_publisher_ext_node idyn_ros_interface ${drc_shared_LIBRARIES} ${YARP_LIBRARIES} icubmod 
+#${ICUB_LIBRARIES} 
+${catkin_LIBRARIES})
 
 #############
 ## Install ##
