Started implementation of publiscation of computed convex_hull

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ find_package(iDynTree REQUIRED)
 find_package(GYM REQUIRED)
 find_package(idynutils REQUIRED)
 find_package(paramHelp REQUIRED)
+FIND_PACKAGE(PCL 1.2 REQUIRED)
 
 set(ROS_LIB_FOLDER $ENV{ROS_LIB_FOLDER} CACHE STRING "ros lib folder")
 link_directories(${ROS_LIB_FOLDER})
@@ -116,7 +117,8 @@ ${TinyXML_INCLUDE_DIRS}
 ${iDynTree_INCLUDE_DIRS}
 ${GYM_INCLUDE_DIRS}
 ${idynutils_INCLUDE_DIRS}
-${paramHelp_INCLUDE_DIRS})
+${paramHelp_INCLUDE_DIRS}
+${PCL_INCLUDE_DIRS})
 
 ## Declare a cpp library
 add_library(idyn_ros_interface src/idyn_ros_interface.cpp)
@@ -138,7 +140,8 @@ ${TinyXML_LIBRARIES}
 ${iDynTree_LIBRARIES}
 ${GYM_LIBRARIES}
 ${idynutils_LIBRARIES}
-${paramHelp_LIBRARIES})
+${paramHelp_LIBRARIES}
+${PCL_LIBRARIES})
 
 target_link_libraries(robot_state_publisher_ext_node idyn_ros_interface ${drc_shared_LIBRARIES} ${YARP_LIBRARIES} 
 #icubmod 
@@ -146,7 +149,8 @@ target_link_libraries(robot_state_publisher_ext_node idyn_ros_interface ${drc_sh
 ${catkin_LIBRARIES}
 ${GYM_LIBRARIES}
 ${idynutils_LIBRARIES}
-${paramHelp_LIBRARIES})
+${paramHelp_LIBRARIES}
+${PCL_LIBRARIES})
 
 #############
 ## Install ##
