--- a/package.xml
+++ b/package.xml
@@ -41,12 +41,14 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>visualization_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>tinyxml</build_depend>
   <build_depend>roslib</build_depend>
   <build_depend>tf</build_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>visualization_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>roslib</run_depend>
