--- a/package.xml
+++ b/package.xml
@@ -47,6 +47,8 @@
   <build_depend>tinyxml</build_depend>
   <build_depend>roslib</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>message_generation</build_depend>
+  <run_depend>message_runtime</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
   <run_depend>roscpp</run_depend>
